--- a/index.html
+++ b/index.html
@@ -3,12 +3,132 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تسجيل الدخول - إدارة محل عطارة</title>
-    <link rel="stylesheet" href="style.css">
+    <title>تسجيل الدخول - شيخ العرب</title>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Reem+Kufi+Ink&display=swap" rel="stylesheet">
+
+    <style>
+        body {
+            font-family: 'Cairo', sans-serif; /* استخدام خط كايرو للنصوص العامة */
+            background-color: #e0f2f7; /* لون خلفية أزرق فاتح وهادئ */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+            direction: rtl; /* لدعم اللغة العربية من اليمين لليسار */
+            text-align: right; /* محاذاة النص لليمين */
+            overflow: hidden; /* لمنع أي سكرول غير مرغوب فيه */
+        }
+
+        .login-container {
+            background-color: #ffffff;
+            padding: 50px;
+            border-radius: 12px;
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15); /* ظل أعمق وأكثر انتشارًا */
+            width: 100%;
+            max-width: 420px;
+            text-align: center;
+            box-sizing: border-box; /* لضمان أن البادينج لا يوسع العنصر */
+            animation: fadeIn 1s ease-out; /* إضافة تأثير ظهور تدريجي */
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        .app-title {
+            font-family: 'Reem Kufi Ink', serif; /* خط مربعات للشعار النصي */
+            font-size: 48px; /* حجم أكبر للشعار */
+            color: #2e7d32; /* لون أخضر داكن للشعار */
+            margin-bottom: 30px;
+            font-weight: 700;
+            letter-spacing: 2px; /* تباعد بين الحروف لإعطاء شكل جمالي */
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.1); /* ظل خفيف للشعار */
+        }
+
+        h2 {
+            color: #333;
+            margin-bottom: 35px;
+            font-size: 30px;
+            font-weight: 700;
+        }
+
+        .input-group {
+            margin-bottom: 25px;
+            text-align: right;
+        }
+
+        .input-group label {
+            display: block;
+            margin-bottom: 10px;
+            color: #555;
+            font-size: 17px;
+            font-weight: 600;
+        }
+
+        .input-group input[type="email"],
+        .input-group input[type="password"] {
+            font-family: 'Cairo', sans-serif; /* استخدام خط كايرو لخانة الإدخال */
+            width: calc(100% - 24px); /* خصم البادينج من العرض (12px * 2) */
+            padding: 14px 12px;
+            border: 1px solid #c8e6c9; /* حدود بلون أخضر فاتح */
+            border-radius: 8px;
+            font-size: 17px;
+            box-sizing: border-box;
+            transition: all 0.3s ease;
+            background-color: #f8fcf8; /* خلفية فاتحة جداً لخانة الإدخال */
+        }
+
+        .input-group input[type="email"]:focus,
+        .input-group input[type="password"]:focus {
+            border-color: #4CAF50; /* لون أخضر عند التركيز */
+            outline: none;
+            box-shadow: 0 0 0 4px rgba(76, 175, 80, 0.25); /* ظل تركيز أخضر خفيف */
+            background-color: #ffffff; /* خلفية بيضاء عند التركيز */
+        }
+
+        button[type="submit"] {
+            font-family: 'Cairo', sans-serif; /* استخدام خط كايرو للزر */
+            background-color: #4CAF50; /* أخضر */
+            color: white;
+            padding: 15px 25px;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 19px;
+            font-weight: 700;
+            transition: background-color 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease;
+            width: 100%;
+            margin-top: 15px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        button[type="submit"]:hover {
+            background-color: #45a049; /* درجة أغمق عند التحويم */
+            transform: translateY(-3px); /* تأثير بسيط عند التحويم */
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        button[type="submit"]:active {
+            transform: translateY(0);
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+        }
+
+        .error-message {
+            color: #d32f2f; /* أحمر داكن للخطأ */
+            margin-top: 20px;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 1.5;
+        }
+    </style>
 </head>
 <body>
     <div class="login-container">
-        <img src="logo.png" alt="شعار محل العطارة" class="logo"> <h2>تسجيل الدخول</h2>
+        <h1 class="app-title">شيخ العرب</h1>
+        <h2>تسجيل الدخول</h2>
         <form id="loginForm">
             <div class="input-group">
                 <label for="email">البريد الإلكتروني:</label>
@@ -56,7 +176,8 @@
                 // لو تسجيل الدخول نجح:
                 console.log("تم تسجيل الدخول بنجاح!");
                 errorMessage.textContent = ''; // مسح أي رسائل خطأ سابقة
-                window.location.href = 'dashboard.html'; // إعادة توجيه لصفحة لوحة التحكم
+                // قم بتغيير 'dashboard.html' إلى المسار الصحيح لصفحة لوحة التحكم الخاصة بك
+                window.location.href = 'dashboard.html';
             } catch (error) {
                 // لو حصل خطأ في تسجيل الدخول:
                 let message = 'حدث خطأ غير متوقع. الرجاء المحاولة مرة أخرى.';
